@@ -17,7 +17,7 @@ Cairo::ImageSurface.new(width, height) do |surface|
   cr = Cairo::Context.new(surface)
 
   # fill background with white
-  cr.set_source_rgba(1.0, 1.0, 1.0, 0.8)
+  cr.set_source_color("#fffc")
   cr.paint
 
   # create shape
@@ -27,9 +27,9 @@ Cairo::ImageSurface.new(width, height) do |surface|
   cr.line_to(50, 150)
   cr.close_path
 
-  cr.set_source_rgb(0.0, 0.0, 0.0)
+  cr.set_source_color(:black)
   cr.fill_preserve
-  cr.set_source_rgb(1.0, 0.0, 0.0)
+  cr.set_source_color(:red)
   cr.set_line_join(Cairo::LINE_JOIN_MITER)
   cr.set_line_width(4)
   cr.stroke
